# nostr-shinjiro-bot

./: .eslintrc.yml  .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  .prettierrc.yml  LICENSE  README.md  licenses.md  main.js  npub.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/workflows/: auto-commit.yml  auto_commit.yml  automate.yml  post_automate.yml
data/: output.txt
data/ref_tweets/: tweets_1.csv  tweets_2.csv
src/: FetchAllPostsContent.ts  LLM.py  Prompt.txt  Prompt.yml  TinySegmenter.js  Tweet.js  Tweet.py  Tweet.ts  arrayExtensions.ts  askGPT.js  askGPT.ts  config.js  config.py  config.ts  extractFrequentWord.ts  generateContent.ts  generatePrompt.js  generatePrompt.ts  index.ts  likePosts.js  likePosts.ts  llm_handler.py  main.py  postToRelays.js  postToRelays.ts  setProfile.js  setProfile.ts  tweet_handler.py  util.ts  utils.js
src/common/: config.py  my_logger.py
