[project]
name = "nostr-shinjiro-bot"
version = "4.0.0"
description = ""
authors = [{ name = "hikaelis", email = "101495056+hikaelis@users.noreply.github.com" }]
requires-python = "==3.12.10"
readme = "README.md"
dependencies = [
    "langchain-openai>=0.2.14,<0.3",
    "python-dotenv>=1.0.1,<2",
    "tweepy>=4.14.0,<5",
    "langchain-google-genai>=2.0.7,<3",
    "pandas>=2.2.3,<3",
    "loguru>=0.7.3,<0.8",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
extend-include = ["*.ipynb"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1",    # undocumented
    "D203",  # one blank line before class
    "D213",  # multi-line summary second line
    "TD001", # invalid todo tag
    "TD002", # missing todo author
    "TD003", # missing todo link
    "PD011", # pandas use of dot values
    "T201"
]
unfixable = [
    "F401", # unused import
    "F841", # unused variable
]
