[project]
name = "nostr-shinjiro-bot"
version = "4.0.0"
description = ""
authors = [{ name = "hikaelis", email = "101495056+hikaelis@users.noreply.github.com" }]
requires-python = "==3.12.10"
readme = "README.md"
dependencies = [
    "langchain-openai>=0.2.14,<0.3",
    "python-dotenv>=1.0.1,<2",
    "tweepy>=4.14.0,<5",
    "langchain-google-genai>=2.0.7,<3",
    "pandas>=2.2.3,<3",
    "loguru>=0.7.3,<0.8",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pip-licenses>=5.0.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.12",
]

[tool.ruff]
line-length = 88
extend-include = ["*.ipynb"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1",    # undocumented
    "D203",  # one blank line before class
    "D213",  # multi-line summary second line
    "TD001", # invalid todo tag
    "TD002", # missing todo author
    "TD003", # missing todo link
    "PD011", # pandas use of dot values
    "T201"
]
unfixable = [
    "F401", # unused import
    "F841", # unused variable
]

[tool.mypy]
allow_redefinition = true
allow_untyped_globals = false
check_untyped_defs = true
color_output = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = true
error_summary = true
ignore_missing_imports = true
implicit_reexport = true
namespace_packages = true
no_implicit_optional = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
strict = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = false
